plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'org.openjfx.javafxplugin' version "0.1.0"
}

group 'HotaruFX'
version '1.1.0'
mainClassName = 'com.annimon.hotarufx.Main'

sourceCompatibility = 17

repositories {
    mavenCentral()
}

javafx {
    version = "21"
    modules = ['javafx.controls', 'javafx.fxml', "javafx.swing"]
}

ext.junit5Version = '5.11.0'

dependencies {
    implementation 'org.fxmisc.richtext:richtextfx:0.11.3'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.0'
    testImplementation "org.junit.jupiter:junit-jupiter-api:$junit5Version"
    testImplementation "org.junit.jupiter:junit-jupiter-params:$junit5Version"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junit5Version"
    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:$junit5Version"
    testImplementation 'org.hamcrest:hamcrest-library:2.2'
}
